Fix refresh, enable assertions